# MeshmerizeMe

./: .gitignore  MeshmerizeMe.py  README.md  geo_obj.py  geo_viewer.py  input2d  input_parser.py  requirements.txt  setup.py  svg_parser.py  test.spring  test.vertex  test_lymph1.tif  uidesign.py  uidesign.ui
MeshmerizeMe/: __init__.py  geo_obj.py  geo_viewer.py  input_parser.py  meshmerizeme_logger.py  points_estimation.py  svg_parser.py  tools.py  version.py
MeshmerizeMe.egg-info/: SOURCES.txt
MeshmerizeMe/scripts/: ContourizeMe  ContourizeMe.py  MMePredictBinaryImage  MMePredictBinaryImage.py  MMeSamplePixels  MMeSamplePixels.py  MMeSolveSVC  MMeSolveSVC.py  MeshmerizeMe  MeshmerizeMe.py
cpp/: CMakeLists.txt  README.md
cpp/src/: Curves.cc  Curves.h  FileIO.cc  FileIO.h  Main.cc  Point.cc  Point.h  Token.cc  Token.h
docs/: Home.md  Installation-Instructions.md  README.md  The-ContourizeMe-Script.md  The-MeshmerizeMe-Script.md
docs/doc_templates/: Home.md  Installation-Instructions.md  README.md  The-ContourizeMe-Script.md  The-MeshmerizeMe-Script.md  render_templates.py
python/: README.md  setup.py  test-diameters.csv  test.pkl  test2-diameters.csv  test2.pkl  test3-diameters.csv  test3.pkl  uidesign.py  wing-diameters.csv  wing.pkl
python/MeshmerizeMe/: __init__.py  geo_obj.py  geo_viewer.py  svg_parser.py  tools.py
python/MeshmerizeMe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_files/: test.vertex
tests/MeshmerizeMe/: geo_obj_test.py  geo_viewer_test.py  input_parser_test.py  points_estimation_test.py  svg_parser_test.py  (+1 more)
(+6 files in other folders)
